# Aegisub-Scripts

./: .gitignore
depctrl/: Cargo.toml
depctrl/src/: lib.rs  sha1.rs  tests.rs  version.rs
doc/: 0x.DeriveTrack.md  0x.KaraTemplater.md  0x.color.md
src/: 0x.ClipToShape.moon  0x.ConcatSimultaneous.moon  0x.DeriveTrack.moon  0x.JoinPairs.moon  0x.JoinPrevious.lua  0x.KaraTemplater.moon  0x.NotFuniDidntLaugh.moon  0x.StableRetime.moon  color.lua
src/bad_rw_lock/: Cargo.toml
src/bad_rw_lock/src/: ConfigHandler.moon  bad_rw_lock.lua  lib.rs
